--- a/styles-contact.css
+++ b/styles-contact.css
@@ -80,17 +80,75 @@ html, body {
 }
 
 #logo {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 	margin-top: 40px;
     text-align: center;
-}
+	margin-bottom: 16px;
 
-p {
-	font-family: chaparral-pro-subhead,serif;
-    font-weight: 800;
+}
+h1{
+	font-family: desire-pro,serif;
+    font-weight: 900;
     font-style: normal;
 	letter-spacing: 1px;
-    color: #b79a90;
+	font-size: 2.3em;
+	margin: 30px auto 10px auto;
+    color: #c6af9f
+; 
+	/*testing out fading in and out*/
+	animation: fadeIn ease 10s;
+	-webkit-animation: fadeIn ease 10s;
+	-moz-animation: fadeIn ease 10s;
+	-o-animation: fadeIn ease 10s;
+	-ms-animation: fadeIn ease 10s;
+   }
+
+   @keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+   }
+   @-moz-keyframes fadeIn {
+	 0% {
+		 opacity: 0;
+	 }
+	 100% {
+		 opacity: 1;
+	 }
+   }
+   @-webkit-keyframes fadeIn {
+	   0% {
+		   opacity: 0;
+	   }
+   }
+   @-o-keyframes fadeIn {
+	   0% {
+		   opacity: 0;
+	   }
+	   100% {
+		   opacity: 1;
+	   }
+   }
+   @-ms-keyframes fadeIn {
+	   0% {
+		   opacity: 0;
+	   }
+	   100% {
+		   opacity: 1;
+	   }
+   }
+p {
+	font-family: desire-pro,serif;
+    font-weight: 800;
+    font-style: normal;
+	font-size: 1.2em;
+	letter-spacing: 1px;
+	margin: 30px auto 25px auto;
+    color: #bca18f;
+	
 
 	/*testing out fading in and out*/
 	 animation: fadeIn ease 10s;
@@ -159,6 +217,7 @@ a{
 	font-weight: bold;
 	letter-spacing: 8px;
 	align-items: center;
+	
     }
 a:hover{
 	color: #c3aaa2;
