--- a/grc338/css-mobile-first/lasagnastyle.css
+++ b/grc338/css-mobile-first/lasagnastyle.css
@@ -36,7 +36,7 @@ h2{
     font-weight: 300; 
     font-size: 2rem; 
     font-style: normal;
-    padding: 0rem 0rem 2rem
+    padding: 0rem 0rem 2rem 1rem
 }
 h3{
     background-color: rgb(250,250,250);
